# EwECS

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
.github/workflows/: ci.yaml
cmake/: CompilerWarnings.cmake
doc/: EwECS.md  Network.md
doc/HowTos/: HowTo+Assets.md  HowTo+Component.md  HowTo+Entity.md  HowTo+Events.md  HowTo+Render.md  HowTo+System.md  HowTo.md
doc/Plugins/: Music.md  Network.md  Physic.md  Plugins.md  Render.md  Sound.md
includes/: CMakeLists.txt  SparseArray.hpp  Utils.hpp  World.hpp
includes/Event/: MouseEvent.hpp
includes/EwECS/: CMakeLists.txt  EwECS.hpp  IPlugin.hpp  Logger.hpp  SparseArray.hpp  Utils.hpp  World.hpp
includes/EwECS/Asset/: AssetHandler.hpp  AssetManager.hpp  CMakeLists.txt
includes/EwECS/Components/: CMakeLists.txt  Components+Sounds.hpp
includes/EwECS/ConfigReader/: CMakeLists.txt  ConfigReader.hpp
includes/EwECS/Event/: CMakeLists.txt  EventManager.hpp  MouseEvent.hpp  SoundEvent.hpp  WindowEvent.hpp
includes/EwECS/Music/: Music.hpp  MusicComponent.hpp  MusicPlugin.hpp
includes/EwECS/Network/: CMakeLists.txt  ClientHandler.hpp  Connection.hpp  NetworkHandler.hpp  Packet.hpp  Serialization.hpp  ServerHandler.hpp  Values.hpp
includes/EwECS/Physic/: CMakeLists.txt  HitBox.hpp  PhysicPlugin.hpp  Weight.hpp
includes/EwECS/SFMLDisplayClass/: CMakeLists.txt  LoadedSprite.hpp  RenderPlugin.hpp  SFMLDisplayClass.hpp  TextComponent.hpp
includes/EwECS/Sound/: CMakeLists.txt  Sound.hpp  SoundComponent.hpp  SoundPlugin.hpp  SoundsComponent.hpp
src/: CMakeLists.txt  Logger.cpp  Utils.cpp  World.cpp
src/Asset/: AssetManager.cpp  CMakeLists.txt
src/ConfigReader/: CMakeLists.txt  ConfigReader.cpp
src/Event/: CMakeLists.txt  EventManager.cpp  KeyboardEvent.cpp  MouseEvent.cpp  SoundEvent.cpp  WindowEvent.cpp
src/JsonHandler/: CMakeLists.txt  JsonHandler.cpp  JsonHandler.hpp
src/Music/: CMakeLists.txt  Music.cpp  MusicPlugin.cpp
src/Network/: CMakeLists.txt  ClientHandler.cpp  NetworkHandler.cpp  ServerHandler.cpp
src/Physic/: CMakeLists.txt  PhysicPlugin.cpp
src/SFMLDisplayClass/: CMakeLists.txt  RenderPlugin.cpp  SFMLDisplayClass.cpp
src/Sound/: CMakeLists.txt  Sound.cpp  SoundPlugin.cpp
